@@ -565,6 +565,7 @@ static const id_format_pair_t th13_fmts[] = {
     { 15, "m*D" },
     { 21, "" },
     { 22, "Sm" },
+    { 23, "S" },
     { 40, "S" },
     { 42, "S" },
     { 43, "S" },
@@ -574,11 +575,15 @@ static const id_format_pair_t th13_fmts[] = {
     { 51, "" },
     { 52, "" },
     { 53, "" },
+    { 54, "" },
     { 55, "" },
+    { 56, "" },
     { 57, "" },
     { 58, "" },
     { 59, "" },
+    { 60, "" },
     { 61, "" },
+    { 62, "" },
     { 63, "" },
     { 65, "" },
     { 64, "" },
@@ -591,10 +596,16 @@ static const id_format_pair_t th13_fmts[] = {
     { 74, "" },
     { 78, "S" },
     { 81, "ffff" },
+    { 82, "S" },
     { 83, "S" },
-    { 87, "Sff" },
+    { 84, "S" },
+    { 86, "SSS" },
+    { 87, "fffff" },
     { 88, "fffff" },
+    { 89, "SSS" },
+    { 91, "SfSSff" },
     { 92, "SfSSff" },
+    { 93, "ffff" },
     { 94, "ffff" },
     { 300, "mffSSS" },
     { 301, "mffSSS" },
@@ -607,18 +618,27 @@ static const id_format_pair_t th13_fmts[] = {
     { 309, "mffSSS" },
     { 311, "mffSSS" },
     { 313, "S" },
+    { 316, "SS" },
+    { 317, "SS" },
     { 318, "SS" },
+    { 320, "Sff" },
+    { 321, "mSSSSS" },
     { 322, "Sff" },
     { 323, "mSSSSS" },
-    { 330, "SSSS" },
+    { 328, "SSSS" },
+    { 329, "Sff" },
+    { 330, "SSSff" },
     { 331, "Sff" },
-    { 332, "SSSff" },
-    { 334, "SSSS" },
-    { 335, "SSSff" },
+    { 332, "SSSS" },
+    { 333, "SSSff" },
+    { 334, "S" },
+    { 335, "SSS" },
     { 400, "ff" },
     { 401, "SSff" },
     { 404, "ff" },
     { 405, "SSff" },
+    { 406, "SS" },
+    { 407, "SSSS" },
     { 408, "ffSS" },
     { 409, "SSffS" },
     { 411, "SSffS" },
@@ -626,8 +646,12 @@ static const id_format_pair_t th13_fmts[] = {
     { 420, "fffSff" },
     { 422, "fffSff" },
     { 425, "Sffffff" },
+    { 427, "" },
     { 429, "SSff" }, 
     { 433, "S" },
+    { 434, "SSSff" },
+    { 436, "SSff" },
+    { 438, "SSSff" },
     { 500, "ff" },
     { 501, "ff" },
     { 502, "S" },
@@ -650,21 +674,32 @@ static const id_format_pair_t th13_fmts[] = {
     { 519, "" },
     { 520, "" },
     { 521, "Sm" },
+    { 522, "SSSx" },
     { 523, "" },
     { 524, "S" },
     { 525, "" },
+    { 526, "S" },
     { 527, "SfS" },
     { 535, "SSSSS" },
     { 536, "fffff" },
     { 537, "SSSx" },
+    { 538, "SSSx" },
     { 539, "SSSx" },
     { 540, "S" },
+    { 542, "" },
+    { 543, "" },
     { 545, "" },
+    { 547, "S" },
     { 548, "SSSS" },
+    { 552, "S" },
     { 554, "" },
-    { 557, "m" },
-    { 558, "SSSff" },
+    { 555, "SS" },
+    { 556, "m" },
+    { 557, "SSSff" },
+    { 558, "S" },
     { 559, "S" },
+    { 561, "" },
+    { 562, "" },
     { 600, "S" },
     { 601, "S" },
     { 602, "SSS" },
@@ -686,14 +721,22 @@ static const id_format_pair_t th13_fmts[] = {
     { 625, "SSSSSSSSS" },
     { 626, "Sff" },
     { 627, "Sf" },
+    { 628, "Sff" },
     { 629, "fS" },
+    { 630, "S" },
     { 632, "S" },
+    { 633, "S" },
+    { 637, "S" },
+    { 640, "SSm" },
     { 700, "Sffff" },
     { 701, "SSSSSS" },
+    { 702, "S" },
     { 703, "SS" },
     { 708, "Sf" },
     { 711, "S" },
-    { 800, "S" },
+    { 800, "Sm" },
+    { 801, "ffS" },
+    { 900, "S" },
     { 1001, "S" },
     { 1002, "S" },
     { 1003, "S" },
